Updated portfolio to add spring 2022 projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -1361,6 +1361,188 @@
                     </tr>
                 </table>
             </section>
+            <section>
+                <h2>CMSC425: Game Programming (Spring 2022)</h2>
+                <!-- 425 Projects table for large screens -->
+                <table class="big-screen">
+                    <tr>
+                        <th>Project Name</th>
+                        <th>Language</th>
+                        <th>Description</th>
+                        <th>Valuable Skills</th>
+                    </tr>
+                    <tr>
+                        <td>Mob Hunt</td>
+                        <td class="table-center">C# (in the context of Unity development)</td>
+                        <td>A group project in which I worked with one other person to create a video game called Mob
+                            Hunt. In the game, the player traverses levels and sets off traps in order to kill enemies.
+                            There are three kinds of enemies, each of which behave somewhat differently. There is a
+                            fairly robust AI system, in which enemies can move between patrol, pursuit, and search
+                            states.
+                            <br><br>
+                            As mentioned, this was a group project. It should be noted that all art assets came from
+                            <a href="https://www.kenney.nl/">Kenney</a>, a website that provides free assets for games.
+                            I am not an artist. I was responsible for creating animation for those 3D models, however.
+                            This was done with a simple sine wave moving limbs back and forth, resulting in
+                            Minecraft-esque animations. I also implemented player movement, camera movement (which
+                            includes a system for turning objects between the player and camera transparent), enemy
+                            AI, parts of the interface, and one of the two levels. Everything else, including the game
+                            concept itself, was done by my teammate.
+                            <br><br>
+                            I don't think the game ended up being particularly impressive, but it was definitely a
+                            valuable learning experience. We struggled with the concept for the game, so it ended up
+                            changing many times throughout the development cycle. If we'd known what we wanted to do
+                            from the start, the game may have turned out better.
+                        </td>
+                        <td>C# programming, Unity development, working on a team, and project planning.</td>
+                    </tr>
+                </table>
+                <!-- 424 Projects table for small screens -->
+                <!-- Game small screen table -->
+                <table class="small-screen">
+                    <tr>
+                        <th>Name</th>
+                        <td class="table-center">Mob Hunt</td>
+                    </tr>
+                    <tr>
+                        <th>Language</th>
+                        <td class="table-center">C# (in the context of Unity development)</td>
+                    </tr>
+                    <tr>
+                        <th>Description</th>
+                        <td>A group project in which I worked with one other person to create a video game called Mob
+                            Hunt. In the game, the player traverses levels and sets off traps in order to kill enemies.
+                            There are three kinds of enemies, each of which behave somewhat differently. There is a
+                            fairly robust AI system, in which enemies can move between patrol, pursuit, and search
+                            states.
+                            <br><br>
+                            As mentioned, this was a group project. It should be noted that all art assets came from
+                            <a href="https://www.kenney.nl/">Kenney</a>, a website that provides free assets for games.
+                            I am not an artist. I was responsible for creating animation for those 3D models, however.
+                            This was done with a simple sine wave moving limbs back and forth, resulting in
+                            Minecraft-esque animations. I also implemented player movement, camera movement (which
+                            includes a system for turning objects between the player and camera transparent), enemy
+                            AI, parts of the interface, and one of the two levels. Everything else, including the game
+                            concept itself, was done by my teammate.
+                            <br><br>
+                            I don't think the game ended up being particularly impressive, but it was definitely a
+                            valuable learning experience. We struggled with the concept for the game, so it ended up
+                            changing many times throughout the development cycle. If we'd known what we wanted to do
+                            from the start, the game may have turned out better.
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Valuable Skills</th>
+                        <td>C# programming, Unity development, working on a team, and project planning.</td>
+                    </tr>
+                </table>
+            </section>
+            <section>
+                <h2>CMSC435: Software Engineering (Spring 2022)</h2>
+                <!-- 435 Projects table for large screens -->
+                <table class="big-screen">
+                    <tr>
+                        <th>Project Name</th>
+                        <th>Language</th>
+                        <th>Description</th>
+                        <th>Valuable Skills</th>
+                    </tr>
+                    <tr>
+                        <td>Online Casino</td>
+                        <td class="table-center">Python (using Django framework), HTML, JavaScript</td>
+                        <td>By far the most useful project during my time at UMD, this was a group project in which I
+                            developed a web app along with four other people. We followed Agile principles while
+                            developing the app, including three sprints and roughly twice-weekly scrum meetings (daily
+                            scrum meetings weren't really feasible due to the scale of the project and people's busy
+                            schedules). The first sprint was one week, while the subsequent sprints were two weeks each,
+                            leading to a five-week development cycle. This was perhaps the most valuable part of the
+                            project to me, learning how software is actually developed in the industry. This class also
+                            taught me how to make my code more readable and how to use Git to collaborate, both of which
+                            were applied during the development of this project.
+                            <br><br>
+                            The project itself was Online Casino, a website in which users can deposit and withdraw "money"
+                            in order to gamble in five casino games -- Poker, Blackjack, Craps, Roulette, and Slot
+                            Machines. The first three featured fully-functional multiplayer, while the latter two were
+                            single-player only. Multiplayer was implemented using websockets, something I had never used
+                            before. They ended up being a huge struggle to wrap my head around. Users can sign up, create
+                            accounts, become friends with other users, send links to one another to easily join each
+                            other's games, and chat with one another during the games. There is a spectating system so
+                            people can watch the games unfold without participating. Other minor features include tutorials
+                            for each game and a system to limit the amount of money that can be deposited into your
+                            account each month.
+                            <br><br>
+                            As this was a group project, obviously I was not responsible for everything. One member of our
+                            group had already used Django before, so we tended to follow his lead for just about everything.
+                            I was responsible for implementing the depositing and withdrawing money systems, the tutorials,
+                            the chat system, and the game of Craps.
+                            <br><br>
+                            As mentioned, I think this was the most valuable project I worked on during my time at UMD.
+                            This class and project gave me more exposure to real software engineering practices than every
+                            other class combined.
+                        </td>
+                        <td>Software engineering practices, including meeting with clients (the professor, in this case),
+                            creating user stories to define what the product does, following Agile principles, using Git
+                            to collaborate, and working as part of a team.
+                            <br><br>
+                            Also, Python programming skills and use of the Django framework.
+                        </td>
+                    </tr>
+                </table>
+                <!-- 435 Projects table for small screens -->
+                <!-- Online Casino small screen table -->
+                <table class="small-screen">
+                    <tr>
+                        <th>Name</th>
+                        <td class="table-center">Online Casino</td>
+                    </tr>
+                    <tr>
+                        <th>Language</th>
+                        <td class="table-center">Python (using Django framework), HTML, JavaScript</td>
+                    </tr>
+                    <tr>
+                        <th>Description</th>
+                        <td>By far the most useful project during my time at UMD, this was a group project in which I
+                            developed a web app along with four other people. We followed Agile principles while
+                            developing the app, including three sprints and roughly twice-weekly scrum meetings (daily
+                            scrum meetings weren't really feasible due to the scale of the project and people's busy
+                            schedules). The first sprint was one week, while the subsequent sprints were two weeks each,
+                            leading to a five-week development cycle. This was perhaps the most valuable part of the
+                            project to me, learning how software is actually developed in the industry. This class also
+                            taught me how to make my code more readable and how to use Git to collaborate, both of which
+                            were applied during the development of this project.
+                            <br><br>
+                            The project itself was Online Casino, a website in which users can deposit and withdraw "money"
+                            in order to gamble in five casino games -- Poker, Blackjack, Craps, Roulette, and Slot
+                            Machines. The first three featured fully-functional multiplayer, while the latter two were
+                            single-player only. Multiplayer was implemented using websockets, something I had never used
+                            before. They ended up being a huge struggle to wrap my head around. Users can sign up, create
+                            accounts, become friends with other users, send links to one another to easily join each
+                            other's games, and chat with one another during the games. There is a spectating system so
+                            people can watch the games unfold without participating. Other minor features include tutorials
+                            for each game and a system to limit the amount of money that can be deposited into your
+                            account each month.
+                            <br><br>
+                            As this was a group project, obviously I was not responsible for everything. One member of our
+                            group had already used Django before, so we tended to follow his lead for just about everything.
+                            I was responsible for implementing the depositing and withdrawing money systems, the tutorials,
+                            the chat system, and the game of Craps.
+                            <br><br>
+                            As mentioned, I think this was the most valuable project I worked on during my time at UMD.
+                            This class and project gave me more exposure to real software engineering practices than every
+                            other class combined.
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Valuable Skills</th>
+                        <td>Software engineering practices, including meeting with clients (the professor, in this case),
+                            creating user stories to define what the product does, following Agile principles, using Git
+                            to collaborate, and working as part of a team.
+                            <br><br>
+                            Also, Python programming skills and use of the Django framework.
+                        </td>
+                    </tr>
+                </table>
+            </section>
             <br><br>
         </main>
     </body>
