Restructured all HTML, temporarily removed CSS

--- a/resume.html
+++ b/resume.html
@@ -20,82 +20,78 @@
         </nav>
         <main>
             <section>
-                <article>
-                    <p>You can download this resume in
-                        <a href="file/doc/Jordan Knapp Resume.docx">.docx</a> and
-                        <a href="file/doc/Jordan Knapp Resume.pdf">.pdf</a> formats.
-                    </p>
-                </article>
+                <p><b>Jordan Knapp</b><br>
+                    223 South Blvd<br>
+                    Salisbury, MD 21801<br>
+                    765-721-7779<br>
+                    See contact page for email
+                </p>
             </section>
             <section>
-                <article class="resume-head">
-                    <p><b>Jordan Knapp</b><br>
-                        223 South Blvd<br>
-                        Salisbury, MD 21801<br>
-                        765-721-7779<br>
-                        See contact page for email
-                    </p>
-                </article>
-                <article class="resume">
-                    <h2>Education</h2>
+                <h2>Education</h2>
+                <ul>
+                    <li><b>University of Maryland, College Park (2018 - 2022)</b></li>
                     <ul>
-                        <li><b>University of Maryland, College Park (2018 - 2022)</b></li>
-                        <ul>
-                            <li>Bachelor of Science, Computer Science</li>
-                            <li>Minor: History</li>
-                            <li>Cumulative GPA: 3.0</li>
-                        </ul>
+                        <li>Bachelor of Science, Computer Science</li>
+                        <li>Minor: History</li>
+                        <li>Cumulative GPA: 3.0</li>
                     </ul>
-                    <h2>Work Experience</h2>
+                </ul>
+                <h2>Work Experience</h2>
+                <ul>
+                    <li><i>Atlantic Abstracting Services, LLC</i> — Snow Hill, Maryland <b>(June - August 2018)</b></li>
                     <ul>
-                        <li><i>Atlantic Abstracting Services, LLC</i> — Snow Hill, Maryland <b>(June - August 2018)</b></li>
-                        <ul>
-                            <li>Digitization of paper files</li>
-                            <li>Organization and management of files</li>
-                            <li>Minor technical support</li>
-                        </ul>
-                        <li><i>Mountains Wanted Publishing</i> — Georgetown, Delaware <b>(2016, 2017 Summers)</b></li>
-                        <ul>
-                            <li>Inventory management</li>
-                            <li>Database management</li>
-                            <li>Minor technical support</li>
-                        </ul>
+                        <li>Digitization of paper files</li>
+                        <li>Organization and management of files</li>
+                        <li>Minor technical support</li>
                     </ul>
-                    <h2>Volunteer and Community Service</h2>
+                    <li><i>Mountains Wanted Publishing</i> — Georgetown, Delaware <b>(2016, 2017 Summers)</b></li>
                     <ul>
-                        <li><b>Chess Club Mentor</b>, <i>Pinehurst Elementary School</i> — Salisbury, Maryland <b>(2014 - 2016)</b></li>
-                        <li><b>Math tutoring</b>, <i>Bennett Middle School</i> — Salisbury, Maryland <b>(2012 - 2014)</b></li>
+                        <li>Inventory management</li>
+                        <li>Database management</li>
+                        <li>Minor technical support</li>
                     </ul>
-                    <h2>Skills</h2>
+                </ul>
+                <h2>Volunteer and Community Service</h2>
+                <ul>
+                    <li><b>Chess Club Mentor</b>, <i>Pinehurst Elementary School</i> — Salisbury, Maryland <b>(2014 - 2016)</b></li>
+                    <li><b>Math tutoring</b>, <i>Bennett Middle School</i> — Salisbury, Maryland <b>(2012 - 2014)</b></li>
+                </ul>
+                <h2>Skills</h2>
+                <ul>
+                    <li>Programming Languages (roughly in order of level of experience)</li>
                     <ul>
-                        <li>Programming Languages (roughly in order of level of experience)</li>
-                        <ul>
-                            <li>Java</li>
-                            <li>C#</li>
-                            <li>Python</li>
-                            <li>C</li>
-                            <li>Ruby</li>
-                            <li>MIPS Assembly</li>
-                            <li>OCaml</li>
-                        </ul>
-                        <li>Database Systems</li>
-                        <ul>
-                            <li>Experience with SQL, MongoDB, and Spark</li>
-                        </ul>
-                        <li>Web Development</li>
-                        <ul>
-                            <li>Knowledgable with HTML and CSS</li>
-                            <li>Experience with the Django framework to develop web apps using Python</li>
-                        </ul>
-                        <li>Able to work effectively in a team environment</li>
-                        <ul>
-                            <li>Experience using Git to collaborate with others</li>
-                            <li>Experience following Agile principles to develop software</li>
-                        </ul>
-                        <li>Experience in hardware installation, including several computer builds, both laptop and
-                            desktop.</li>
+                        <li>Java</li>
+                        <li>C#</li>
+                        <li>Python</li>
+                        <li>C</li>
+                        <li>Ruby</li>
+                        <li>MIPS Assembly</li>
+                        <li>OCaml</li>
                     </ul>
-                </article>
+                    <li>Database Systems</li>
+                    <ul>
+                        <li>Experience with SQL, MongoDB, and Spark</li>
+                    </ul>
+                    <li>Web Development</li>
+                    <ul>
+                        <li>Knowledgable with HTML and CSS</li>
+                        <li>Experience with the Django framework to develop web apps using Python</li>
+                    </ul>
+                    <li>Able to work effectively in a team environment</li>
+                    <ul>
+                        <li>Experience using Git to collaborate with others</li>
+                        <li>Experience following Agile principles to develop software</li>
+                    </ul>
+                    <li>Experience in hardware installation, including several computer builds, both laptop and
+                        desktop.</li>
+                </ul>
+            </section>
+            <section>
+                <p>You can download this resume in
+                        <a href="file/doc/Jordan Knapp Resume.docx">.docx</a> and
+                        <a href="file/doc/Jordan Knapp Resume.pdf">.pdf</a> formats.
+                </p>
             </section>
         </main>
     </body>
