Started working on CSS changes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </ul>
         </nav>
         <main>
-            <section>
+            <section class="home">
                 <figure>
                     <img src="file/img/me.jpg" alt="A photo of me.">
                 </figure>
@@ -31,7 +31,7 @@
                     using the contact page. Other important links are listed below.
                 </p>
             </section>
-            <section>
+            <section class="home">
                 <h2>Links</h2>
                 <ul>
                     <li><a href="https://www.linkedin.com/in/jordan-g-knapp/">LinkedIn</a></li>
