CSS for resume page

--- a/resume.html
+++ b/resume.html
@@ -19,15 +19,19 @@
             </ul>
         </nav>
         <main>
-            <section>
+            <section class="resume-head">
                 <p><b>Jordan Knapp</b><br>
                     223 South Blvd<br>
                     Salisbury, MD 21801<br>
                     765-721-7779<br>
                     See contact page for email
                 </p>
+                <p>You can download this resume in
+                        <a href="file/doc/Jordan Knapp Resume.docx">.docx</a> and
+                        <a href="file/doc/Jordan Knapp Resume.pdf">.pdf</a> formats.
+                </p>
             </section>
-            <section>
+            <section class="resume">
                 <h2>Education</h2>
                 <ul>
                     <li><b>University of Maryland, College Park (2018 - 2022)</b></li>
@@ -86,12 +90,6 @@
                     <li>Experience in hardware installation, including several computer builds, both laptop and
                         desktop.</li>
                 </ul>
-            </section>
-            <section>
-                <p>You can download this resume in
-                        <a href="file/doc/Jordan Knapp Resume.docx">.docx</a> and
-                        <a href="file/doc/Jordan Knapp Resume.pdf">.pdf</a> formats.
-                </p>
             </section>
         </main>
     </body>
