Updated portfolio page

--- a/smashold.html
+++ b/smashold.html
@@ -36,11 +36,11 @@
                 <table>
                     <tr>
                         <th>Version</th>
-                        <td class="table-center">v1.0</td>
+                        <th>v1.0</th>
                     </tr>
                     <tr>
                         <th>Date</th>
-                        <td class="table-center">May 2019</td>
+                        <th>May 2019</th>
                     </tr>
                     <tr>
                         <th>Description</th>
@@ -66,11 +66,11 @@
                 <table>
                     <tr>
                         <th>Version</th>
-                        <td class="table-center">v2.1</td>
+                        <th>v2.1</th>
                     </tr>
                     <tr>
                         <th>Date</th>
-                        <td class="table-center">July 2019</td>
+                        <th>July 2019</th>
                     </tr>
                     <tr>
                         <th>Description</th>
@@ -92,11 +92,11 @@
                 <table>
                     <tr>
                         <th>Version</th>
-                        <td class="table-center">v3.0</td>
+                        <th>v3.0</th>
                     </tr>
                     <tr>
                         <th>Date</th>
-                        <td class="table-center">July 2019</td>
+                        <th>July 2019</th>
                     </tr>
                     <tr>
                         <th>Description</th>
@@ -116,11 +116,11 @@
                 <table>
                     <tr>
                         <th>Version</th>
-                        <td class="table-center">v4.2</td>
+                        <th>v4.2</th>
                     </tr>
                     <tr>
                         <th>Date</th>
-                        <td class="table-center">August 2019</td>
+                        <th>August 2019</th>
                     </tr>
                     <tr>
                         <th>Description</th>
@@ -145,11 +145,11 @@
                 <table>
                     <tr>
                         <th>Version</th>
-                        <td class="table-center">v5.0</td>
+                        <th>v5.0</th>
                     </tr>
                     <tr>
                         <th>Date</th>
-                        <td class="table-center">February 2020</td>
+                        <th>February 2020</th>
                     </tr>
                     <tr>
                         <th>Description</th>
@@ -175,11 +175,11 @@
                 <table>
                     <tr>
                         <th>Version</th>
-                        <td class="table-center">v6.0</td>
+                        <th>v6.0</th>
                     </tr>
                     <tr>
                         <th>Date</th>
-                        <td class="table-center">June 2020</td>
+                        <th>June 2020</th>
                     </tr>
                     <tr>
                         <th>Description</th>
@@ -200,11 +200,11 @@
                 <table>
                     <tr>
                         <th>Version</th>
-                        <td class="table-center">v6.4</td>
+                        <th>v6.4</th>
                     </tr>
                     <tr>
                         <th>Date</th>
-                        <td class="table-center">August 2020</td>
+                        <th>August 2020</th>
                     </tr>
                     <tr>
                         <th>Description</th>
@@ -227,11 +227,11 @@
                 <table>
                     <tr>
                         <th>Version</th>
-                        <td class="table-center">v7.0</td>
+                        <th>v7.0</th>
                     </tr>
                     <tr>
                         <th>Date</th>
-                        <td class="table-center">October 2020</td>
+                        <th>October 2020</th>
                     </tr>
                     <tr>
                         <th>Description</th>
@@ -249,11 +249,11 @@
                 <table>
                     <tr>
                         <th>Version</th>
-                        <td class="table-center">v8.0</td>
+                        <th>v8.0</th>
                     </tr>
                     <tr>
                         <th>Date</th>
-                        <td class="table-center">January 2021</td>
+                        <th>January 2021</th>
                     </tr>
                     <tr>
                         <th>Description</th>
@@ -271,11 +271,11 @@
                 <table>
                     <tr>
                         <th>Version</th>
-                        <td class ="table-center">v9.0</td>
+                        <th>v9.0</th>
                     </tr>
                     <tr>
                         <th>Date</th>
-                        <td class="table-center">March 2021</td>
+                        <th>March 2021</th>
                     </tr>
                     <tr>
                         <th>Description</th>
@@ -293,6 +293,7 @@
                     </tr>
                 </table>
             </section>
+            <br><br>
         </main>
     </body>
 </html>
