Finalized redesign CSS

--- a/portfolio.html
+++ b/portfolio.html
@@ -327,8 +327,7 @@
                     skills I got from each project are listed.
                     <br><br>
                     Hosting school projects publicly on GitHub or any other site isn't allowed, so if any potential
-                    employers would like access to any or all of these projects,
-                    <a href="contact.html">send me an email</a>.
+                    employers would like access to any of these projects, <a href="contact.html">send me an email</a>.
                 </p>
             </section>
             <section>
